# AgentChatBus

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  FRONTEND_TEST_PLAN.md  LICENSE  LICENSES-vendor.md  README.md  REQUIREMENTS_CLI_INVOKE.md  check_bus103.py  check_duplicates.py  check_msg_wait.py  conftest.py  debug_agent_status.py  diagnose_index.py  emoji.md  fix.py  get_events.py  manual_clean.py  mkdocs.yml  pyproject.toml  requirements.txt  restart.ps1  resume_investigation.md  stdio_main.py  test-human-message.js  test_agent_registry.py  test_cli_invite.py  test_conv_timeout_unit.py  test_copilot_session.ps1  test_e2e.py  test_image_flow.py  test_msg_return_format.py  test_rate_limit_unit.py  test_sysprompt.py  test_timeout_handling.py  testlog.txt
agentchatbus/: stdio_main.py
agentchatbus-server/: start35765.ps1
agentchatbus-ts/: BUS_CONNECT_FIX_COMPLETE.md  BUS_CONNECT_TEST_GAP_ANALYSIS.md  EXTERNAL_SERVER_QUICKSTART.md  GROUP2_COMPLETE_SUMMARY.md  GROUP2_FINAL_REPORT.md  GROUP2_MSG_SYNC_PROGRESS.md  GROUP2_PROGRESS_SNAPSHOT.md  GROUP2_SUMMARY.md  README.md  RULE_UPDATE_GROUP2_ONWARDS.md  TEST_FIXES_COMPLETE.md  TEST_MIGRATION_ENFORCEMENT.md  TEST_MIGRATION_PLAN.md  TEST_MSG_SYNC_UNIT_COMPLETE.md  TEST_PARITY_PLAN.md  TEST_PHASE1_REPORT.md  TEST_TYPE_ANALYSIS.md  TOKEN_EXPIRY_FIX.md  msg_wait_body3.json  msg_wait_short.json  package-lock.json  package.json  test-output.txt
config/: available-agents.json
dev_notes/: bus_connect_msg_wait_flow_v1.md  bus_connect_msg_wait_flow_v2.md
doc/: frontend_test_plan.md  mcp_interaction_flow.md
(+389 files in other folders)
